Fix: Horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,6 @@
 
 html, body, #__next {
   height: 100%;
+   overflow-x: hidden;
 }
 
